# quiver-score

./: .env.example  .gitignore  CLAUDE.md  README.md  ROADMAP-MOBILE.md  ROADMAP.md  docker-compose.go.yml  docker-compose.prod.yml  docker-compose.yml
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 09655b1f84c7_create_all_tables.py  0c2446f1aa1a_merge_attachments_and_challenges_.py  16a26cee6578_add_fk_indexes_cascades_constraints.py  1c0254d7648f_add_tournament_matchups.py  2d3e4f5a6b7c_add_challenges.py  459225dbf800_add_email_verification_profile_public_.py  481541dcc0cf_add_club_team_tables.py  a1b2c3d4e5f6_add_personal_records.py  a1b2c3d4e5f7_add_social_links.py  a2b3c4d5e6f7_add_attachments.py  a5b6c7d8e9f0_add_coaching.py  b2c3d4e5f6a7_add_tournament_rounds.py  b3c4d5e6f7a8_add_club_tables.py  b6c7d8e9f0a1_add_social.py  c1d2e3f4a5b6_add_notifications.py  c3d4e5f6a7b8_drop_end_images.py  c7d8e9f0a1b2_restructure_sight_marks_tournaments.py  d2de875cebce_baseline_schema.py  d2e3f4a5b6c7_add_classifications.py  d8e9f0a1b2c3_add_club_shared_rounds.py  e3f4a5b6c7d8_add_sight_marks.py  e9f0a1b2c3d4_make_end_stage_id_nullable.py  (+2 more)
backend/app/: config.py  database.py  dependencies.py  main.py
backend/tests/: conftest.py  test_auth.py  test_classifications.py  test_club_shared_rounds.py  test_clubs.py  test_coaching.py  test_equipment.py  test_notifications.py  test_round_edit.py  test_scoring.py  test_setups.py  test_sharing.py  test_sight_marks.py  test_social.py  test_tournaments.py  test_users.py
(+353 files in other folders)
