[project]
name = "backend"
version = "0.1.0"
description = "QuiverScore - Target Archery Score Tracking API"
requires-python = ">=3.12"
# Runtime is the Go API (backend-go/). This Python project exists ONLY to run
# Alembic migrations on deploy, so deps are limited to what alembic/env.py and
# the SQLAlchemy models need. The former FastAPI app was removed (Phase 10
# cutover finally cleaned up). Contract tests (dev group) hit the live Go API
# over httpx and need no app code.
dependencies = [
    "alembic>=1.18.5",
    "asyncpg>=0.31.0",
    "pydantic-settings>=2.14.2",
    "sqlalchemy[asyncio]>=2.0.51",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.1.1",
    "pytest-cov>=7.1.0",
]
